BPER/DEVF/force-app/main/default/objects/ServiceModel__c/ServiceModel__c.object-meta.xml
<CustomObject>
    <label>Macro-modello di servizio</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome modello di servizio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Macro-modelli di servizio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>