BPER/DEVF/force-app/main/default/objects/ServiceModel__c/fields/PTF_Division__c.field-meta.xml
<CustomField>
    <fullName>PTF_Division__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Filiera</label>
    <length>255</length>
    <type>Text</type>
</CustomField>