BPER/DEVF/force-app/main/default/objects/ServiceModel__c/fields/PTF_DivisionDS__c.field-meta.xml
<CustomField>
    <fullName>PTF_DivisionDS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Division DS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>