BPER/DEVF/force-app/main/default/objects/ServiceModel__c/fields/PTF_EffortNumberRequired__c.field-meta.xml
<CustomField>
    <fullName>PTF_EffortNumberRequired__c</fullName>
    <label>Numero Effort richiesto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>