BPER/DEVF/force-app/main/default/objects/ServiceModel__c/fields/PTF_FamiliesEffortConstantNumber__c.field-meta.xml
<CustomField>
    <fullName>PTF_FamiliesEffortConstantNumber__c</fullName>
    <label>Numero costante effort famiglie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>