BPER/DEVF/force-app/main/default/objects/ServiceModel__c/fields/PTF_FlagSistema__c.field-meta.xml
<CustomField>
    <fullName>PTF_FlagSistema__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag sistema</label>
    <type>Checkbox</type>
</CustomField>