BPER/DEVF/force-app/main/default/objects/ServiceModel__c/fields/PTF_MacroDivision__c.field-meta.xml
<CustomField>
    <fullName>PTF_MacroDivision__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Macrofiliera</label>
    <length>255</length>
    <type>Text</type>
</CustomField>