BPER/DEVF/force-app/main/default/objects/ServiceModel__c/fields/PTF_NameAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>PTF_NameAbbreviation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome abbreviazione</label>
    <length>2</length>
    <type>Text</type>
</CustomField>