BPER/DEVF/force-app/main/default/objects/ServiceModel__c/fields/PTF_RelevanceIndexNumber__c.field-meta.xml
<CustomField>
    <fullName>PTF_RelevanceIndexNumber__c</fullName>
    <label>Numero Indice Rilevanza</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>