BPER/DEVF/force-app/main/default/objects/ServiceModel__c/fields/PTF_ServicingEffortNumber__c.field-meta.xml
<CustomField>
    <fullName>PTF_ServicingEffortNumber__c</fullName>
    <label>Numero Effort Tagliando</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>