BPER/DEVF/force-app/main/default/objects/ServiceModel__c/fields/PTF_TresholdPTF__c.field-meta.xml
<CustomField>
    <fullName>PTF_TresholdPTF__c</fullName>
    <label>Soglia Portafogliazione</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>